Unable to open links to same Nightly instance/profile from outside Nightly when `Use the selected profile without asking at startup` is unchecked
Categories
(Toolkit :: Startup and Profile System, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox65 | --- | unaffected |
firefox66 | --- | unaffected |
firefox67 | --- | verified |
People
(Reporter: Fanolian+BMO, Assigned: mossop)
References
Details
(Keywords: regression, reproducible)
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:67.0) Gecko/20100101 Firefox/67.0
Build ID: 20190307215858
Prerequisite
- Open Profile Manager.
- Uncheck
Use the selected profile without asking at startup
. - Start Nightly with any profile.
- Make sure Nightly is the default browser.
Steps to reproduce
- Try to open a link, or a local html file, from outside Nightly.
- Select the currently used profile in Profile Manager as the desired profile. I.e. try to open an outside link as a new tab.
Actual result
A warning window about "Profile in Use" pops up. I must use a new profile, or other existing profiles, for the action.
Expected result
Open the link/html file as a new tab in the currently active window, just like in previous builds.
Notes
If Use the selected profile without asking at startup
is checked I can open the link/file in the active window.
But if another profile was selected in Profile manager before opening outside link/file, that profile is used instead without asking.
I do not know how to find the regression range for such case with Mozregression, But I think it is probably regressed by bug 1518639.
Comment 2•6 years ago
|
||
I verified this on Windows 10 and I can reproduce it on the latest Nightly 67.0a1(2019-03-08), this is also reproducible on Ubuntu 16.04.
I also verified Mac OS 10.14 and the issue is not reproducible.
Comment 3•6 years ago
|
||
Regression window(on win10):
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=14d519134002121d40c8fe43384c66d7070420b0&tochange=fe3cd9f0d12bae82190bd17ea474d1a2f4bb80a2
Suspect: Bug 513742 and Bug 1518639
Dave,
Your bunch of patch seems to cause the regression. Can you please look into this?
I hit this as well, on Linux... but I worked around it by checking the checkbox. :-)
(actually, that doesn't work around it, it means that links from other apps appear to be starting in an entirely separate firefox instance)
Assignee | ||
Comment 6•6 years ago
|
||
If the user selects a profile we will either remote the current arguments to it
or we'll restart into it. Either way we don't need to check if the profile is
locked at this point.
We also don't need to double check if the profile is missing since bug 1530615
landed.
Assignee | ||
Updated•6 years ago
|
Comment 8•6 years ago
|
||
bugherder |
Comment 9•6 years ago
|
||
I verified it on Mac OS X 10.14 and Ubuntu 16.04 with FF Nightly 67.0a1(2019-03-10) and it works.
On Windows 10 with the same FF NIghtly 67.0a1(2019-03-10) the behaviour is different: The warning window about "Profile in Use" doesn't pops up any more, but every time when I want to open a link I'm prompted with Profile Manager to select a profile. This behaviour doesn't reproduce on other OSes.
Fanolian can you please retest this on your end? Thanks
Reporter | ||
Comment 10•6 years ago
|
||
(In reply to ovidiu boca[:Ovidiu] from comment #9)
but every time when I want to open a link I'm prompted with Profile Manager to select a profile.
Fanolian can you please retest this on your end? Thanks
Do you mean opening a link from outside Nightly? If so, yes Profile Manager pops up and asks for a profile. (I do not use -no-remote in any Nightly instances.)
I think this should be the intended behaviour (when Use the selected profile without asking at startup
is unchecked).
The warning window about "Profile in Use" doesn't pops up any more
This is also fixed on my Windows 10. Now I can open an outside link/file to my currently used profile, or choose a different profile for quick testing.
Comment 11•6 years ago
|
||
Thanks for testing it, yes I mean a link from outside Nightly.
Dave, can you please take a look at this, because there are 2 different results:
Please use the STR from the description:
Actual results with Nightly 67.0a1(2019-030-10):
- On Windows, the actual result is that the Profile Manager pops up and ask for a profile.
- On Mac and Ubuntu, the Profile Manager doesn't pop up.
Comment 12•6 years ago
|
||
Using the STR from the description.
- The profile manager pops up using Build ID: 20190311102806 Mozilla/5.0 (X11; Linux x86_64; rv:67.0) Gecko/20100101 Firefox/67.0 on Ubuntu 18.04 and Linux Mint 19.1 for me.
When I click on Start Nightly in the profile manager, the link opens in a new tab in the currently running Nightly.
I'd prefer the previous behavior where the link just opens in a new tab without having to go through the profile manager every time I want to open a new link from Thunderbird.
Updated•6 years ago
|
Reporter | ||
Comment 13•6 years ago
|
||
(In reply to WaltS48 [:walts48] from comment #12)
I'd prefer the previous behavior where the link just opens in a new tab without having to go through the profile manager every time I want to open a new link from Thunderbird.
:mossop addressed the concern in a recent post so stay tuned (in a future bug).
Assignee | ||
Comment 14•6 years ago
|
||
(In reply to ovidiu boca[:Ovidiu] from comment #11)
Thanks for testing it, yes I mean a link from outside Nightly.
Dave, can you please take a look at this, because there are 2 different results:
Please use the STR from the description:
Actual results with Nightly 67.0a1(2019-030-10):
- On Windows, the actual result is that the Profile Manager pops up and ask for a profile.
- On Mac and Ubuntu, the Profile Manager doesn't pop up.
I tested on Ubuntu and I do get the Profile Manager to appear.
I don't expect the profile manager to appear on Mac.
Comment 15•6 years ago
|
||
After the discussion from the yesterday meeting I retested this and here are the results:
Mac - the profile manager doesn't pop up
Windows and Ubuntu the profile manager appears.
For the moment I understood that this is the expected behaviour, but from our point of view (QA) it will be a good idea to change it for Ubuntu and Windows. You suggested implementing a new check on the startup to verify what was the last profile used and if the browser is set as default but I think this may cause adding extra time at the startup process.
To solve the problem we need to see what is the cause, and in our case the reason why we have this issue is that the "Use the selected profile without asking at startup" option can be unchecked, but how about disabling that option and if someone wants to open the profile manager can use -p command?
Dave, what do you think about this?
Assignee | ||
Comment 16•6 years ago
|
||
(In reply to ovidiu boca[:Ovidiu] from comment #15)
For the moment I understood that this is the expected behaviour, but from our point of view (QA) it will be a good idea to change it for Ubuntu and Windows. You suggested implementing a new check on the startup to verify what was the last profile used and if the browser is set as default but I think this may cause adding extra time at the startup process.
To solve the problem we need to see what is the cause, and in our case the reason why we have this issue is that the "Use the selected profile without asking at startup" option can be unchecked, but how about disabling that option and if someone wants to open the profile manager can use -p command?
I think we'll irritate a lot of users if we just remove that option entirely. Looking yesterday though I think it would be pretty straightforward to just defer checking that option until we've checked if there is an existing instance running. I've filed bug 1535021 to track that.
Comment 17•5 years ago
|
||
Verified the fix using Fx67.0b12 and Fx68.0a1 on Ubuntu 18.04, Windows 10 x64 and macOS 10.13. Links and html files are correctly opened in the current browser without any profile manager prompts displayed.
Description
•