Bug 1533677: Don't lock the profile when selecting one from the profile manager until we've attempted to remote our arguments to an existing instance. r=Gijs

If the user selects a profile we will either remote the current arguments to it
or we'll restart into it. Either way we don't need to check if the profile is
locked at this point.

We also don't need to double check if the profile is missing since bug 1530615
landed.

Differential Revision: https://phabricator.services.mozilla.com/D22758